@@ -1,3 +1,9 @@
+2020-01-13 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* src/SDCC.y,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h: Add parser rules and an error message for compound literals.
+
 2020-01-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* configure.ac,
